
<resources>
    <string name="app_name">BECA MOBILE 03 ANDROID - SQUAD 2</string>
    <string name="title_digital_coin">Moeda Digital</string>
    <string name="coins">Moedas</string>
    <string name="favorites">Favoritos</string>
    <string name="search_bar">Search</string>
    <string name="coin_value_zero">$ 000.000.00</string>
    <string name="btn_delete">REMOVER</string>
    <string name="btn_include">ADICIONAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="botao_lista_de_moedas">Botão para listar moedas</string>
    <string name="button_coins">Moedas</string>
    <string name="botao_moedas_favoritas">Botão para listar moedas favoritas</string>
    <string name="button_favorite">Adicionadas</string>
    <string name="add_favorites">Adicionar</string>
    <string name="volume">Volumes negociados</string>
    <string name="last_hour">Última hora</string>
    <string name="last_day">Último dia</string>
    <string name="last_month">Último mês</string>
    <string name="dollar_sign">$</string>
    <string name="back_button">Voltar</string>
    <string name="description_back_button">Botão de voltar</string>
    <string name="description_coin_image">Imagem da moeda</string>
    <string name="description_add_remove_button">Botão de adicionar/remover favorito</string>
    <string name="description_coin_value">Valor da moeda</string>
    <string name="description_1hr_value">Valor da ultima hora</string>
    <string name="description_day_value">Valor do ultimo dia</string>
    <string name="description_month_value">Valor do ultimo mês</string>
</resources>